--- a/src/styles/general-style.scss
+++ b/src/styles/general-style.scss
@@ -1,6 +1,8 @@
 $blue: #316099;
 $font:'Open Sans', sans-serif;
 $font-color: #1F3F68;
+$font2: 'Stint Ultra Condensed', cursive;
+$font3:'Open Sans', sans-serif;
 body{
   display: flex;
   flex-direction: column;
